--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,6 +10,7 @@ body {
   -o-background-size: cover;
   background-size: cover;
   color: white;
+  font-family: 'Courier New', Courier, monospace;
 }
 
 h1 {
@@ -47,11 +48,13 @@ h1 {
 
 .character {
   display: inline-block;
-  margin-right: 15px;
+  margin-right: 8px;
   margin-bottom: 15px;
   background-color: white;
   border: 4px solid green;
-  width: 150px;
+  border-radius: 50%;
+  height: 180px;
+  width: 180px;
   text-align: center;
   padding: 5px;
   color: #000;
@@ -61,7 +64,13 @@ h1 {
 .character img {
   height: 130px;
   width: 130px;
-  margin: 5px;
+  margin: 5px 5px 2px;
+  border-radius: 50%;
+}
+
+.name, .hp {
+  font-weight: 700;
+  margin: 0;
 }
 
 #enemies .character {
