--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,30 +14,29 @@ body {
 }
 
 h1 {
-  float: right;
-  margin-top: 0;
-  margin-right: 30px;
+  text-align: right;
+  margin-bottom: 20px;
+}
+
+.main {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
 }
 
 .play-area {
-  padding-top: 5px;
-  margin-left: 15px;
+  margin-bottom: 20px;
 }
 
 #attack {
-  margin-right: 15px;
+  display: block;
+  margin: 0 auto;
   border-radius: 3px;
-  position: relative;
-  bottom: 78px;
   padding: 6px 15px;
   background: red;
   color: white;
   border: 0px;
   font-size: 18px;
-}
-
-.d-none {
-  display: none !important;
 }
 
 #player, #defender {
@@ -50,13 +49,13 @@ h1 {
   display: inline-block;
   margin-right: 8px;
   margin-bottom: 15px;
-  background-color: white;
-  border: 4px solid green;
+  background-color: #FEC223;
+  border: 4px solid black;
   border-radius: 50%;
-  height: 180px;
-  width: 180px;
+  height: 190px;
+  width: 190px;
   text-align: center;
-  padding: 5px;
+  padding-top: 2px;
   color: #000;
   cursor: pointer;
 }
@@ -64,7 +63,6 @@ h1 {
 .character img {
   height: 130px;
   width: 130px;
-  margin: 5px 5px 2px;
   border-radius: 50%;
 }
 
@@ -81,6 +79,7 @@ h1 {
 
 #defender .character {
   background-color: #000;
+  border-color: green;
   color: #fff
 }
 
@@ -96,4 +95,6 @@ h1 {
   color: #004A5D;
   border: 0px;
   font-size: 18px;
+  display: block;
+  margin: 0 auto;
 }
